tests/sksl/errors/StructVariableReservedName.glsl

struct S {
    float f;
};
S float;
vec4 main() {
    return vec4(float.f);
}
